# rest-auth-proof-of-concept

./: .dockerignore  .editorconfig  .envrc  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: config.py  database.py  main.py
app/auth/: api_key.py  auth0.py  basic.py  bearer.py  digest.py  jwt.py  oauth2.py
app/auth/oauth2/: auth0.py  okta.py
app/models/: user.py
app/routers/: __init__.py  api_key.py  auth0.py  basic.py  bearer.py  digest.py  jwt.py  oauth2.py  user.py
app/routers/oauth2/: auth0.py  okta.py
app/schemas/: __init__.py  digest.py  token.py  user.py
migrations/: env.py
migrations/versions/: 7cfe03c57450_0001_create_user_model.py  eafb8aedc291_0001_create_user_model.py
scripts/: entrypoint.sh
tests/: conftest.py  test_api_key_authentication.py  test_basic_authentication.py  test_bearer_authentication.py  test_digest_authentication.py  test_jwt_authentication.py  test_oauth_authentication.py
