[tool.poetry]
name = "auth-proof-of-concept"
version = "0.1.0"
description = ""
authors = ["Daniel Restrepo <danielrestrepo9725@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
uvicorn = "^0.24.0"
pydantic = "^2.0.1"
pydantic-settings = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
