[tool.poetry]
name = "auth-proof-of-concept"
version = "0.1.0"
description = ""
authors = ["Daniel Restrepo <danielrestrepo9725@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.0"
fastapi = "^0.100.1"
httpx = "^0.25.1"
uvicorn = "^0.24.0"
okta-jwt = "^1.3.5"
passlib = {version = "^1.7.3", extras = ["bcrypt"]}
psycopg = {version = "^3.1.13", extras = ["binary"]}
pydantic = "^2.0.1"
pydantic-settings = "^2.0.0"
pytest = "^7.0.0"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.20"

[tool.poetry.dev-dependencies]
Faker = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
