[tool.poetry]
name = "auth-proof-of-concept"
version = "0.1.1"
description = "Proof of concept for an authentication service"
authors = ["Daniel Restrepo <danielrestrepo9725@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.0"
fastapi = "^0.100.1"
httpx = "^0.27.0"
uvicorn = "^0.29.0"
bcrypt = "4.0.1"
passlib = "^1.7.3"
psycopg = {version = "^3.1.13", extras = ["binary"]}
pydantic = "^2.0.1"
pydantic-settings = "^2.0.0"
PyJWT = "^2.8.0"
pytest = "^7.0.0"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.20"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"

[tool.poetry.group.test.dependencies]
Faker = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
